--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -14,6 +14,12 @@
     <link href="../static/assets/extra-libs/calendar/calendar.css" rel="stylesheet" />
     <!-- Custom CSS -->
     <link href="../static/assets/dist/css/style.min.css" rel="stylesheet" />
+    <script src="../static/assets/libs/jquery/dist/jquery.min.js"></script>
+    <script src="../static/assets/extra-libs/taskboard/js/jquery-ui.min.js"></script>
+    <script src="../static/assets/libs/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../static/assets/extra-libs/toastr/dist/build/toastr.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../static/app-assets/vendors/css/toastr.css">
     <style>
         .btn-light-success {
             font-size: 1rem !important;
@@ -153,7 +159,6 @@
     </div>
 </div>
 
-    <script src="../static/assets/libs/jquery/dist/jquery.min.js"></script>
     <script src="../static/assets/extra-libs/taskboard/js/jquery-ui.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
     <script src="../static/assets/libs/popper.js/popper.min.js"></script>
@@ -176,6 +181,8 @@
     <script src="../static/assets/libs/moment/min/moment.min.js"></script>
     <script src="../static/assets/libs/fullcalendar/dist/fullcalendar.min.js"></script>
     <script src="../static/assets/dist/js/pages/calendar/cal-init.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="../../static/js/scripts.js"></script>
 </body>
 
 </html>
