--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -43,7 +43,7 @@
       <!-- Login box.scss -->
       <!-- ============================================================= -->
       <div class="row auth-wrapper gx-0">
-        <div class="col-lg-4 col-xl-3 bg-primary auth-box-2 on-sidebar">
+        <div class="col-lg-4 col-xl-3 bg-primary auth-box-2 border-1 on-sidebar">
           <div class="h-100 d-flex align-items-center justify-content-center">
             <div class="row justify-content-center text-center">
               <div class="col-md-7 col-lg-12 col-xl-9">
@@ -72,6 +72,8 @@
         >
           <div class="row justify-content-center w-100 mt-4 mt-lg-0">
             <div class="col-lg-6 col-xl-3 col-md-7">
+              
+              {% include 'alert.html' %}
               <div class="card" id="registerform">
                 <div class="card-body">
                   <h2>Sign Up Form</h2>
@@ -171,7 +173,6 @@
                       >Create an account</a
                     >
                   </p>
-                  {% include 'alert.html' %}
                   <form
                     class="form-horizontal mt-4 pt-4 needs-validation"
                     novalidate
